5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1643_869.log
== TEST (2019-04-13 13:37:45) 
-- CODE:
compra = float(input("valor da compra: "))
if	(compra >= 200.0)
	print(compra * 0.05):
else:
	print(compra )
-- ERROR:
File "XXXX", line 2
    if	(compra >= 200.0)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 13:37:56) 
-- CODE:
compra = float(input("valor da compra: "))
if	(compra >= 200.0):
	print(compra * 0.05)
else:
	print(compra )
-- OUTPUT:
10.0045
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 13:39:42) 
-- CODE:
compra = float(input("valor da compra: "))
if	(compra >= 200.0*0.05):
	print(compra )
else:
	print(compra )
-- OUTPUT:
200.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 13:40:27) 
-- CODE:
compra = float(input("valor da compra: "))
if	(desconto >= 200.0*0.05):
	print(desconto )
else:
	print(desconto )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if	(desconto >= 200.0*0.05):
NameError: name 'desconto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 13:42:14) 
-- CODE:
compra = float(input("valor da compra: "))
if	(compra >= 200.0):
	print(compra - (compra * 0.05) )
else:
	print(compra )
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 13:42:24) 
-- CODE:
compra = float(input("valor da compra: "))
if	(compra >= 200.0):
	print(compra - (compra * 0.05) )
else:
	print(compra )
-- EXECUTION TIME:
0.141049
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 13:43:32) 
-- CODE:
compra = float(input("valor da compra: "))
if	(compra >= 200.0):
	print(round(compra - (compra * 0.05), 2 ))
else:
	print(round(compra ))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 13:43:39) 
-- CODE:
compra = float(input("valor da compra: "))
if	(compra >= 200.0):
	print(round(compra - (compra * 0.05), 2 ))
else:
	print(round(compra ))
-- EXECUTION TIME:
0.183432
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:05:19) 
-- CODE:
compra = float(input("valor da compra: "))
if	(compra >= 200.0):
	print(round(compra - (compra * 0.05), 2 ))
else:
	print(round(compra ))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:05:31) 
-- CODE:
compra = float(input("valor da compra: "))
if	(compra >= 200.0):
	print(round(compra - (compra * 0.05), 2 ))
else:
	print(round(compra ))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
